force-app/main/default/objects/Exam_Detail__c/Exam_Detail__c.object-meta.xml
<CustomObject>
    <label>Exam Detail</label>
    <nameField>
        <displayFormat>EDC-{0000}</displayFormat>
        <label>Exam Detail Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exam Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>