force-app/main/default/objects/Exam_Detail__c/fields/Date_of_Exam__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Exam__c</fullName>
    <label>Date of Exam</label>
    <type>Date</type>
</CustomField>