force-app/main/default/objects/Exam_Detail__c/fields/Marks_Obtained__c.field-meta.xml
<CustomField>
    <fullName>Marks_Obtained__c</fullName>
    <label>Marks Obtained</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>