force-app/main/default/objects/Exam_Detail__c/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student</label>
    <referenceTo>Student__c</referenceTo>
    <relationshipLabel>Exam Details</relationshipLabel>
    <relationshipName>Exam_Details</relationshipName>
    <type>Lookup</type>
</CustomField>