force-app/main/default/objects/Exam_Detail__c/fields/Total_Marks__c.field-meta.xml
<CustomField>
    <fullName>Total_Marks__c</fullName>
    <label>Total Marks</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>